[gd_scene load_steps=4 format=3 uid="uid://00vy6vmhnulp"]

[ext_resource type="Script" uid="uid://dbvr7b3m3j3oc" path="res://Scenes/Maintenance/MaintenanceOLD.gd" id="1_rppcm"]
[ext_resource type="Texture2D" uid="uid://f8tkyibvwaul" path="res://Assets/Basement.png" id="2_jgfpy"]
[ext_resource type="Texture2D" uid="uid://8i1jk7nasydo" path="res://Assets/Rooms/Maintenance.png" id="3_qu3pp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rppcm")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_jgfpy")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(0.635, 0.635)
texture = ExtResource("3_qu3pp")

[node name="TowerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 198.0
offset_right = 262.0
offset_bottom = 31.0
text = "TOWER"

[node name="InspectionButton" type="Button" parent="."]
layout_mode = 0
offset_left = 416.0
offset_right = 519.0
offset_bottom = 31.0
text = "INSPECTION"

[node name="ManagementButton" type="Button" parent="."]
layout_mode = 0
offset_left = 656.0
offset_right = 779.0
offset_bottom = 31.0
text = "MANAGEMENT"

[node name="TechTreeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 908.0
offset_right = 998.0
offset_bottom = 31.0
text = "TECH TREE"

[node name="ContentContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 35.0
offset_top = 109.0
offset_right = 1115.0
offset_bottom = 614.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 45.0
offset_bottom = 31.0
text = "Back"
